--- a/enigmes/index.html
+++ b/enigmes/index.html
@@ -7,14 +7,30 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    
     <div class="container">
         <h1>Jeu de Piste</h1>
+        <p id="currentEnigmeNumDisplay">Énigme actuelle : 1</p> <!-- Affichage du numéro de l'énigme actuelle -->
         <p>Entrez le mot ou le code :</p>
         <input type="text" id="userInput" placeholder="Entrez le code ici">
         <button onclick="checkCode()">Valider</button>
         <p id="responseMessage"></p>
+        <table>
+            <tr>
+                <th>Type d'énigme</th>
+                <th>Contenu de l'énigme</th>
+                <th>Statut</th>
+            </tr>
+            <tr>
+                <td id="enigmeType"></td>
+                <td id="enigmeContent"></td>
+                <td id="responseStatus"></td>
+            </tr>
+        </table>
+        <button id="nextEnigmeButton" onclick="loadNextEnigme()" style="display:none;">Suivant</button>
         <img id="responseImage" src="" alt="" style="display:none; margin-top: 20px; max-width: 100%;">
         <iframe id="responseVideo" src="" style="display:none; margin-top: 20px; width: 100%; height: 315px;" frameborder="0" allowfullscreen></iframe>
+
     </div>
     <script src="script.js"></script>
 </body>
