--- a/index.html
+++ b/index.html
@@ -76,6 +76,12 @@
 <nav>
     <a href="#contexte">Contexte</a>   
     <a href="./enigmes/index.html">Page des Énigmes</a>
+    <a href="./G1/index.html">Groupe 1</a>
+    <a href="./G2/index.html">Groupe 2</a>
+    <a href="./G4/index.html">Groupe 3</a>
+    <a href="./G5/index.html">Groupe 4</a>
+    <a href="./G6/index.html">Groupe 5</a>
+    <a href="./G7/index.html">Groupe 6</a>
 </nav>
 
 <div class="container">
