--- a/index.html
+++ b/index.html
@@ -101,8 +101,9 @@
         <h2 class="section-title">L'Aventure</h2>
         <img src="./img/secte-aventure.webp" alt="L'Aventure">
         <p class="content">
-            Les élèves, équipés de tablettes ou de smartphones, se déplacent dans le parc, cherchant des indices et discutant des solutions. Ils travaillent ensemble, combinant leurs forces pour résoudre chaque énigme. Des parents et des professeurs sont également présents pour superviser et encourager les équipes.
+            Les élèves, équipés de smartphones, se déplacent dans le parc, cherchant des indices et discutant des solutions. Ils travaillent ensemble, combinant leurs forces pour résoudre chaque énigme. En cas d'énigme trop dur, ils pourront demander un indice dans le groupe whatsapp, s'ils commencent le message par <b> "Le renard passe par la forêt."</b>.
         </p>
+        <p> Pour commencer, les élèves doivent cliquer sur la page des enigmes et écrire simplement leur classe... bonne chance!</p>
     </section>
     <a href="./enigmes/index.html">
         <button style="background-color: #4CAF50; color: white; border: none; padding: 10px 20px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px; cursor: pointer; border-radius: 12px;">Aller à la Page des Énigmes</button>
