--- a/v2025/suspect1.html
+++ b/v2025/suspect1.html
@@ -12,7 +12,7 @@
     }
     iframe {
       width: 100%;
-      height: 500px;
+      height: 800px;
       border: none;
       margin-bottom: 20px;
     }
@@ -28,12 +28,12 @@
 </head>
 <body>
 
-  <h1>🧮 Le Prof de Maths</h1>
+  <h1>🧮 Le Prof de Mathss</h1>
   <p>Il aurait été jaloux de ne pas avoir été choisi pour le voyage à Zermatt. Aurait-il voulu se venger ?</p>
   <p>Une note trouvée dans sa salle contient un étrange tableau de chiffres...</p>
 
-  <div id="etape1">
-    <iframe src="https://lockee.fr/o/Ke49OVdN?nobg&noft"></iframe>
+  <div id="etape1" >
+    <iframe src="https://lockee.fr/o/Ke49OVdN?nobg&noft&top&light" height="800" width="100%" frameborder="10""></iframe>
   </div>
 
   <div id="etape2" style="display:none;">
