--- a/v2025/suspect1.html
+++ b/v2025/suspect1.html
@@ -28,33 +28,140 @@
 </head>
 <body>
 
-  <h1>🧮 Le Prof de Mathss</h1>
-  <p>Il aurait été jaloux de ne pas avoir été choisi pour le voyage à Zermatt. Aurait-il voulu se venger ?</p>
-  <p>Une note trouvée dans sa salle contient un étrange tableau de chiffres...</p>
+  <h1>🧮 Suspect: Le Prof de Maths</h1>
+  <p>Il aurait été jaloux de ne pas avoir été choisi pour le voyage à Zermatt en 2024 et airait tout fait pour y aller en 2025. Aurait-il voulu se venger ?</p>
+  <p>Nous avons essayé d'enquêter sur lui et voilà les informations que nous avons</p>
 
   <div id="etape1" >
+    <h2>Enigme 1</h2>
+    <p>
+    Une vidéo a été retrouvée sur une ancienne clé USB portant une étiquette :  
+    <em>« Pour ceux qui cherchent à comprendre. »</em>  
+    Regardez-la attentivement… elle pourrait vous mener à un lieu du parc où tout a commencé.
+  </p>
+
+  <div style="position:relative; padding-bottom:56.25%; height:0; overflow:hidden; max-width:100%; margin-bottom:20px;">
+    <iframe 
+      src="https://www.youtube.com/embed/FXdShmxPYmA" 
+      frameborder="0" 
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+      allowfullscreen 
+      style="position:absolute; top:0; left:0; width:100%; height:100%;">
+    </iframe>
+  </div>
+
+  <p>
+    Une fois sur place, cherchez un mot écrit quelque part. Ce mot est la clé pour ouvrir le cadenas ci-dessous :
+  </p>
+
+  <iframe 
+    src="https://lockee.fr/o/Ke49OVdN?nobg&noft&top&light" 
+    height="800" 
+    width="100%" 
+    frameborder="0"
+  ></iframe>
+
+
     <iframe src="https://lockee.fr/o/Ke49OVdN?nobg&noft&top&light" height="800" width="100%" frameborder="10""></iframe>
   </div>
 
   <div id="etape2" style="display:none;">
-    <iframe src="https://lockee.fr/o/zzSjB01p?nobg&noft"></iframe>
+    <h2>Enigme 1 Résolu</h2>
+    <h2>Enigme 2</h2>
+
+    <p>
+      Grâce à l’analyse du banc sur lequel il s’asseyait souvent, les enquêteurs ont trouvé un vieux carnet oublié, recouvert de gribouillis. 
+      Parmi eux : des croquis de personnages, des citations en japonais, et surtout une liste de noms familiers pour tout amateur de manga.
+    </p>
+
+    <p>
+      Il ne s’agissait plus d’un doute : le professeur était passionné de <strong>mangas psychologiques</strong>. Parmi les titres griffonnés :
+       <em>Monster</em>, <em>Death Note</em>, <em>Erased</em>... Mais un manga revenait encore et encore dans ses notes : <strong>Naruto</strong>.
+    </p>
+
+    <p>
+      L’un des assistants de l’enquête a obtenu l’autorisation de fouiller sa bibliothèque. C’est là, entre deux volumes, que quelque chose 
+      d’étrange est apparu. Une feuille glissée dans le tome 18 de Naruto. Sur cette feuille, une image, codée :
+    </p>
+
+    
+    <img src="../img/logique.png" alt="Énigme trouvée dans Naruto" style="display:block; width:100%; max-width:600px; margin:20px auto; border-radius:10px; box-shadow:0 0 10px rgba(0,0,0,0.5);">
+
+
+    <p>
+      À vous de résoudre l’énigme... mais il faudra réfléchir.
+    </p>
+    
+    <iframe src="https://lockee.fr/o/pdQML4Te?nobg&noft&top&light"></iframe>
   </div>
 
-  <a href="https://www.lockee.fr/o/TON-CODE-ICI" onclick="localStorage.setItem('suspect1','done')" target="_blank" class="btn">
-    Accéder à l’énigme finale
+  <div id="etape3" style="display:none;">
+    <h2>Enigme 1 Résolu</h2>
+    <h2>Enigme 2 Résolu</h2>
+    <h2>Enigme 3</h2>
+    <img src="../img/operation.png" alt="Énigme trouvée dans Naruto" style="display:block; width:100%; max-width:600px; margin:20px auto; border-radius:10px; box-shadow:0 0 10px rgba(0,0,0,0.5);">
+
+    <iframe src="https://lockee.fr/o/cUId2IEX?nobg&noft&top&light"></iframe>
+  </div>
+
+  <div id="etape4" style="display:none;">
+    <h2>Enigme 1 Résolu</h2>
+    <h2>Enigme 2 Résolu</h2>
+    <h2>Enigme 3 Résolu</h2>
+    <h2>Enigme 4</h2>
+    <p>
+      En interrogeant un ancien collègue de Mme ***, les enquêteurs ont appris une chose curieuse : elle se rendait parfois seule au Parc de la Grange… mais en voiture. Toujours discrète, elle se garait loin de l'entrée, du côté des places numérotées.
+    </p>
+
+    <p>
+      Un témoin affirme avoir vu son véhicule un matin, mais ne se souvient plus du numéro exact. Pourtant, un cliché du parking a été retrouvé dans la mémoire d’un vieux téléphone abandonné dans la salle des maîtres.
+    </p>
+
+    <p>
+      Voici la photo. Regardez-la bien : elle pourrait vous dire sur quelle place la voiture était garée. Saurez-vous retrouver le bon numéro ?
+    </p>
+    <img src="../img/parking.png" alt="Énigme trouvée dans Naruto" style="display:block; width:100%; max-width:600px; margin:20px auto; border-radius:10px; box-shadow:0 0 10px rgba(0,0,0,0.5);">
+    <iframe src="https://lockee.fr/o/6Wjan04R?nobg&noft&top&light"></iframe>
+  </div>
+
+  <div id="etape5" style="display:none;">
+    <h2>Enigme 1 Résolu</h2>
+    <h2>Enigme 2 Résolu</h2>
+    <h2>Enigme 3 Résolu</h2>
+    <h2>Enigme 4 Résolu</h2>
+    <h2> Fin de l'enquete sur le suspect</h2>
+    <p>
+
+      Nous avons toutes les informations qu'il faut.. nous devons regarder d'autre suspect
+    </p>
+     <a href="./suspects.html" onclick="localStorage.setItem('suspect1','done')" target="_blank" class="btn">
+    Accéder à d'autre suspect
   </a>
+  </div>
+
+ 
 
   <script>
-    // Vérifie si l'URL contient "BANANE"
-    const url = new URL(window.location.href);
-    const searchParams = url.searchParams;
-    const param = url.href.includes("BANANE");
+  const params = window.location.href.toUpperCase();
 
-    if (param) {
-      document.getElementById("etape1").style.display = "none";
-      document.getElementById("etape2").style.display = "block";
-    }
-  </script>
+  // Masque toutes les étapes au départ
+  for (let i = 1; i <= 5; i++) {
+    document.getElementById("etape" + i).style.display = "none";
+  }
+
+  if (params.includes("BANANE")) {
+    document.getElementById("etape2").style.display = "block";
+  } else if (params.includes("POMME")) {
+    document.getElementById("etape3").style.display = "block";
+  } else if (params.includes("KIWI")) {
+    document.getElementById("etape4").style.display = "block";
+  } else if (params.includes("ANANAS")) {
+    document.getElementById("etape5").style.display = "block";
+  } else {
+    // Par défaut, affiche l'étape 1
+    document.getElementById("etape1").style.display = "block";
+  }
+</script>
 
 </body>
 </html>
