--- a/v2025/suspects.html
+++ b/v2025/suspects.html
@@ -6,16 +6,18 @@
   <title>Suspects : L'enquête</title>
   <style>
     body {
+      margin: 0;
       font-family: Arial, sans-serif;
       background-color: #111;
       color: #fff;
-      margin: 0;
-      padding: 0;
     }
+
     h1 {
       text-align: center;
-      padding: 30px 10px;
+      padding: 20px;
+      font-size: 1.8em;
     }
+
     .container {
       display: flex;
       flex-wrap: wrap;
@@ -23,56 +25,130 @@
       gap: 20px;
       padding: 20px;
     }
+
     .suspect {
-      background-color: #222;
-      border: 2px solid #4CAF50;
+      position: relative;
+      width: 100%;
+      max-width: 400px;
       border-radius: 10px;
-      width: 300px;
-      height: 200px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 1.5em;
-      font-weight: bold;
-      cursor: pointer;
-      text-align: center;
-      transition: transform 0.2s ease, background-color 0.2s ease;
+      overflow: hidden;
       text-decoration: none;
-      color: white;
+      display: block;
+      box-shadow: 0 0 10px rgba(0,0,0,0.5);
     }
-    .suspect:hover {
+
+    .suspect img {
+      width: 100%;
+      height: auto;
+      display: block;
+    }
+
+    .overlay,
+    .hover-indicator {
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-weight: bold;
+      font-size: 1.8em;
+      text-align: center;
+      border-radius: 10px;
+      transition: opacity 0.3s ease;
+      pointer-events: none;
+    }
+
+    .overlay {
+      background-color: rgba(0, 255, 0, 0.5);
+      color: #000;
+      opacity: 0;
+    }
+
+    .hover-indicator {
+      background-color: rgba(0, 0, 0, 0.4);
+      color: #fff;
+      opacity: 0;
+    }
+
+    .suspect:hover .hover-indicator {
+      opacity: 1;
+    }
+
+    .suspect.resolu .overlay {
+      opacity: 1;
+    }
+
+    button {
+      margin: 40px auto 20px;
+      display: block;
+      padding: 10px 20px;
+      font-size: 1em;
+      border: none;
+      border-radius: 8px;
       background-color: #4CAF50;
-      transform: scale(1.05);
-      color: black;
+      color: white;
+      cursor: pointer;
     }
-    .locked {
-      display: none;
+
+    @media screen and (max-width: 500px) {
+      .suspect {
+        max-width: 95%;
+      }
     }
   </style>
 </head>
 <body>
   <h1>Choisis un suspect à interroger</h1>
+
   <div class="container">
-    <a href="suspect1.html" class="suspect" id="suspect1">Le prof de maths</a>
-    <a href="suspect2.html" class="suspect locked" id="suspect2">L'agent technique</a>
-    <a href="suspect3.html" class="suspect locked" id="suspect3">Le prof de musique</a>
-    <a href="suspect4.html" class="suspect locked" id="suspect4">L’ancienne élève</a>
-    <button onclick="localStorage.clear(); location.reload();" style="margin-top:20px;">
-  Réinitialiser la progression
-</button>
+    <a href="suspect1.html" class="suspect" id="suspect1">
+      <img src="../img/mugshot-prof-maths.png" alt="Prof de maths" />
+      <div class="overlay">✅ RÉSOLU</div>
+      <div class="hover-indicator">👉 Cliquer pour enquêter</div>
+    </a>
+
+    <a href="suspect2.html" class="suspect" id="suspect2">
+      <img src="../img/mugshot-agent.png" alt="Agent technique" />
+      <div class="overlay">✅ RÉSOLU</div>
+      <div class="hover-indicator">👉 Cliquer pour enquêter</div>
+    </a>
+
+    <a href="suspect3.html" class="suspect" id="suspect3">
+      <img src="../img/mugshot-prof-musique.png" alt="Prof de musique" />
+      <div class="overlay">✅ RÉSOLU</div>
+      <div class="hover-indicator">👉 Cliquer pour enquêter</div>
+    </a>
+
+    <a href="suspect4.html" class="suspect locked" id="suspect4">
+      <img src="../img/mugshot-eleve.png" alt="L’ancienne élève" />
+      <div class="overlay">✅ RÉSOLU</div>
+      <div class="hover-indicator">👉 Cliquer pour enquêter</div>
+    </a>
   </div>
 
+  <button onclick="localStorage.clear(); location.reload();">🔄 Réinitialiser la progression</button>
+
   <script>
-    // Afficher les suspects débloqués
-    if (localStorage.getItem("suspect1") === "done") {
-      document.getElementById("suspect2").classList.remove("locked");
-    }
-    if (localStorage.getItem("suspect2") === "done") {
-      document.getElementById("suspect3").classList.remove("locked");
-    }
-    if (localStorage.getItem("suspect3") === "done") {
-      document.getElementById("suspect4").classList.remove("locked");
-    }
+    const suspects = ["suspect1", "suspect2", "suspect3", "suspect4"];
+
+    suspects.forEach((id, index) => {
+      const el = document.getElementById(id);
+
+      if (localStorage.getItem(id) === "done") {
+        el.classList.add("resolu");
+
+        if (index + 1 < suspects.length) {
+          document.getElementById(suspects[index + 1])?.classList.remove("locked");
+        }
+      } else if (index > 0 && localStorage.getItem(suspects[index - 1]) !== "done") {
+        el.classList.add("locked");
+        el.style.display = "none";
+      }
+    });
   </script>
 </body>
+
+
 </html>
