--- a/v2025/suspect1.html
+++ b/v2025/suspect1.html
@@ -29,6 +29,23 @@
 <body>
 
   <h1>🧮 Suspect: Le Prof de Maths</h1>
+    <a href="suspects.html" style="
+    position: fixed;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #4CAF50;
+    color: white;
+    padding: 12px 20px;
+    border-radius: 50px;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 16px;
+    box-shadow: 0 4px 6px rgba(0,0,0,0.3);
+    z-index: 999;
+  ">
+    🔙 Retour aux suspects
+  </a>
   <p>Il aurait été jaloux de ne pas avoir été choisi pour le voyage à Zermatt en 2024 et airait tout fait pour y aller en 2025. Aurait-il voulu se venger ?</p>
   <p>Nous avons essayé d'enquêter sur lui et voilà les informations que nous avons</p>
 
