--- a/v2025/suspect3.html
+++ b/v2025/suspect3.html
@@ -29,6 +29,24 @@
 <body>
 
   <h1>🎵 Suspect : Le Professeur de Musique</h1>
+  <a href="suspects.html" style="
+      position: fixed;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      background-color: #4CAF50;
+      color: white;
+      padding: 12px 20px;
+      border-radius: 50px;
+      text-decoration: none;
+      font-weight: bold;
+      font-size: 16px;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.3);
+      z-index: 999;
+    ">
+      🔙 Retour aux suspects
+</a>
+
   <p>
     Enseignant discret mais passionné, il aurait été vu à plusieurs endroits suspects dans le parc, fredonnant des airs de musique étranges...  
     Certains élèves l’ont trouvé bizarrement nerveux ces derniers temps, et des indices semblent avoir été laissés par inadvertance.
