--- a/v2025/index.html
+++ b/v2025/index.html
@@ -75,13 +75,13 @@
 
 <nav>
     <a href="#contexte">Contexte</a>
-    <a href="./enigmes/index.html">Page des Énigmes</a>
-    <a href="./G1/index.html">Groupe 1</a>
-    <a href="./G2/index.html">Groupe 2</a>
-    <a href="./G3/index.html">Groupe 3</a>
-    <a href="./G4/index.html">Groupe 4</a>
-    <a href="./G5/index.html">Groupe 5</a>
-    <a href="./G6/index.html">Groupe 6</a>
+    <a href="suspects.html">Page des Énigmes</a>
+    <a href="./G1/suspects.html">Groupe 1</a>
+    <a href="./G2/suspects.html">Groupe 2</a>
+    <a href="./G3/suspects.html">Groupe 3</a>
+    <a href="./G4/suspects.html">Groupe 4</a>
+    <a href="./G5/suspects.html">Groupe 5</a>
+    <a href="./G6/suspects.html">Groupe 6</a>
 </nav>
 
 <div class="container">
