--- a/v2025/suspect1.html
+++ b/v2025/suspect1.html
@@ -46,8 +46,17 @@
 ">
   🔙 Retour aux suspects
 </a>
-  <p>Il aurait été jaloux de ne pas avoir été choisi pour le voyage à Zermatt en 2024 et airait tout fait pour y aller en 2025. Aurait-il voulu se venger ?</p>
+
+  <div style="background:#222; padding:15px; border-radius:10px; margin:20px 0; box-shadow:0 0 10px rgba(0,0,0,0.6);">
+    <h2 style="margin-top:0; color:#FFD700;">🧑‍🏫 Fiche Suspect</h2>
+    <p><strong>Nom :</strong> GANDILFO</p>
+    <p><strong>Prénom :</strong> JULIEN</p>
+    <p><strong>Âge :</strong> 30 ans</p>
+    <p><strong>Profession :</strong> Professeur de mathématiques</p>
+    <p><strong>Particularités :</strong> Il aurait été jaloux de ne pas avoir été choisi pour le voyage à Zermatt en 2024 et airait tout fait pour y aller en 2025. Aurait-il voulu se venger ?</p>
   <p>Nous avons essayé d'enquêter sur lui et voilà les informations que nous avons</p>
+  </div>
+  <p></p>
 
   <div id="etape1" >
     <h2>Enigme 1</h2>
@@ -147,7 +156,13 @@
     <h2> Fin de l'enquete sur le suspect</h2>
     <p>
 
-      Nous avons toutes les informations qu'il faut.. nous devons regarder d'autre suspect
+      Nous avons toutes les informations qu'il faut.. nous devons regarder d'autre suspect. 
+    </p>
+    <p>
+      Il écrivait souvent ce mot au tableau lorsqu’il voulait que ses élèves ouvrent les yeux… 
+      <span style="display:inline-block; font-size:1.5em; color:#FFD700; font-weight:bold; background:#333; padding:4px 8px; border-radius:6px;">
+        1. déclic
+      </span>, disait-il. Peut-être est-ce une piste...Il vaut mieux garder ceci pour plus tard!
     </p>
      <a href="./suspects.html" onclick="localStorage.setItem('suspect1','done')" target="_blank" class="btn">
     Accéder à d'autre suspect
