--- a/v2025/suspect2.html
+++ b/v2025/suspect2.html
@@ -55,7 +55,17 @@
 ">
   🔙 Retour aux suspects
 </a>
-  <p>Discret et toujours présent dans le parc, l'agent d'entretien connaît les moindres recoins du lieu. Il aurait pu cacher quelque chose… ou avoir vu quelque chose qu’il ne fallait pas. À nous de le découvrir.</p>
+<div style="background:#222; padding:15px; border-radius:10px; margin:20px 0; box-shadow:0 0 10px rgba(0,0,0,0.6);">
+    <h2 style="margin-top:0; color:#FFD700;">🧑‍🏫 Fiche Suspect</h2>
+    <p><strong>Nom :</strong> Huley</p>
+    <p><strong>Prénom :</strong> HANK</p>
+    <p><strong>Âge :</strong> 51 ans</p>
+    <p><strong>Profession :</strong> Agent d'entretien</p>
+    <p><strong>Particularités :Discret et toujours présent dans le parc, l'agent d'entretien connaît les moindres recoins du lieu. Il aurait pu cacher quelque chose… ou avoir vu quelque chose qu’il ne fallait pas. À nous de le découvrir.</strong> </p>
+ 
+</div>
+
+
 
   <div id="etape1">
     <h2>Énigme 1 - L'Arbre</h2>
@@ -71,7 +81,8 @@
   </div>
 
   <div id="etape2" style="display:none;">
-    <h2>Énigme 2 - Le Jeu d’enfants</h2>
+    <h2>Enigme 1 Résolu</h2>
+    <h2>Enigme 2</h2>
     <p>
       En enquêtant autour de l’aire de jeux, un témoin a raconté avoir vu l’agent dessiner avec de la craie des motifs colorés. Était-ce un simple jeu ou un code secret ?
       En observant les couleurs sur les jeux pour enfants, vous découvrirez peut-être un message laissé à destination d’un complice…
@@ -82,7 +93,9 @@
   </div>
 
   <div id="etape3" style="display:none;">
-    <h2>Énigme 3 - La Plante empoisonnée</h2>
+    <h2>Enigme 1 Résolu</h2>
+    <h2>Enigme 2 Résolu</h2>
+    <h2>Enigme 3</h2>
     <p>
       Dans le jardin du parc, une plante a récemment été déplacée. Or, cette plante est connue pour ses propriétés toxiques… Elle s’appelle <strong>belladone</strong>.
       Est-ce une coïncidence ou un indice ? Peut-être que l’agent connaissait cette propriété ?
@@ -96,7 +109,10 @@
   </div>
 
   <div id="etape4" style="display:none;">
-    <h2>Énigme 4 - Les ruines préhistoriques</h2>
+    <h2>Enigme 1 Résolu</h2>
+    <h2>Enigme 2 Résolu</h2>
+    <h2>Enigme 3 Résolu</h2>
+    <h2>Enigme 4</h2>
     <p>
       Il paraîtrait que l’agent a été aperçu plusieurs fois en train de nettoyer les alentours des ruines, même lorsqu’il n’était pas affecté à cette zone.
       Une pancarte ancienne y indique un mot qui pourrait servir de mot de passe… Était-ce un lieu de rendez-vous ou une cachette ?
@@ -107,6 +123,10 @@
   </div>
 
   <div id="etape5" style="display:none;">
+    <h2>Enigme 1 Résolu</h2>
+    <h2>Enigme 2 Résolu</h2>
+    <h2>Enigme 3 Résolu</h2>
+    <h2>Enigme 4 Résolu</h2>
     <h2>Énigme 5 - Les Moutons</h2>
     <p>
       Des promeneurs réguliers du parc ont vu l’agent parler... aux moutons. D’abord absurde, cette scène prend du sens lorsqu’on apprend qu’une petite boîte en métal a été retrouvée dans l’herbe tondue.
@@ -119,15 +139,27 @@
   </div>
 
   <div id="etape6" style="display:none;">
-    <h2>Suspect identifié</h2>
+    <h2>Enigme 1 Résolu</h2>
+    <h2>Enigme 2 Résolu</h2>
+    <h2>Enigme 3 Résolu</h2>
+    <h2>Enigme 4 Résolu</h2>
+    <h2>Enigme 5 Résolu</h2>
+    <h2> Fin de l'enquete sur le suspect</h2>
     <p>
-      Toute les infos sont OK
+      Nous avons toutes les informations qu'il faut.. nous devons regarder d'autre suspect. 
     </p>
-     
+    <p>
+       Il a griffonné un mot étrange sur le revers de sa combinaison de travail… Un seul mot, rageusement inscrit :
+      <span style="display:inline-block; font-size:1.5em; color:#FFD700; font-weight:bold; background:#333; padding:4px 8px; border-radius:6px;">
+        3. forcer
+      </span>, Mais que voulait-il vraiment forcer ? Une porte ? La vérité ?. Peut-être est-ce une piste...Il vaut mieux garder ceci pour plus tard!
+    </p>
+
+   
    
     <h3>Fin de l’enquête sur ce suspect</h3>
     <a href="./suspects.html" onclick="localStorage.setItem('suspect2','done')" class="btn">
-      Retour aux suspects
+      Valider l'enquête sur ce suspect
     </a>
   </div>
 
