--- a/v2025/suspect3.html
+++ b/v2025/suspect3.html
@@ -47,9 +47,19 @@
   🔙 Retour aux suspects
 </a>
 
+<div style="background:#222; padding:15px; border-radius:10px; margin:20px 0; box-shadow:0 0 10px rgba(0,0,0,0.6);">
+    <h2 style="margin-top:0; color:#FFD700;">🧑‍🏫 Fiche Suspect</h2>
+    <p><strong>Nom :</strong> Tivolepa</p>
+    <p><strong>Prénom :</strong> Jean</p>
+    <p><strong>Âge :</strong> 42 ans</p>
+    <p><strong>Profession :</strong> Professeur de Musique</p>
+    <p><strong>Particularités :</strong>Enseignant discret mais passionné, il aurait été vu à plusieurs endroits suspects dans le parc, fredonnant des airs de musique étranges...  
+    Certains élèves l’ont trouvé bizarrement nerveux ces derniers temps, et des indices semblent avoir été laissés par inadvertance. </p>
+ 
+</div>
+
   <p>
-    Enseignant discret mais passionné, il aurait été vu à plusieurs endroits suspects dans le parc, fredonnant des airs de musique étranges...  
-    Certains élèves l’ont trouvé bizarrement nerveux ces derniers temps, et des indices semblent avoir été laissés par inadvertance.
+    
   </p>
 
   <div id="etape1">
@@ -65,7 +75,8 @@
   </div>
 
   <div id="etape2" style="display:none;">
-    <h2>Énigme 2 - Une autre photo mystérieuse</h2>
+    <h2>Enigme 1 Résolu</h2>
+    <h2>Enigme 2</h2>
     <p>
       Une autre image retrouvée dans la salle de musique pointe vers un lieu bien particulier du parc... .  
       Peut-être que les sons qu’il y fredonnait prennent ici tout leur sens.
@@ -77,7 +88,9 @@
   </div>
 
   <div id="etape3" style="display:none;">
-    <h2>Énigme 3 - La portée musicale</h2>
+    <h2>Enigme 1 Résolu</h2>
+    <h2>Enigme 2 Résolu</h2>
+    <h2>Enigme 3</h2>
     <p>
       Dans son bureau, une partition étrange contenait une musique.  
       <p>
@@ -98,7 +111,10 @@
   </div>
 
   <div id="etape4" style="display:none;">
-    <h2>Énigme 4 - Le téléphone et le morse</h2>
+    <h2>Enigme 1 Résolu</h2>
+    <h2>Enigme 2 Résolu</h2>
+    <h2>Enigme 3 Résolu</h2>
+    <h2>Enigme 4</h2>
     <p>
       Sur une feuille oubliée par le professeur, un numéro de téléphone était griffonné.  
       En appelant ce numéro, on entend un étrange message audio… c’est du morse. Il faut le décoder.
@@ -112,20 +128,39 @@
   </div>
 
   <div id="etape5" style="display:none;">
-    <h2>Énigme 5 - Une abeille dans le parc</h2>
+    <h2>Enigme 1 Résolu</h2>
+    <h2>Enigme 2 Résolu</h2>
+    <h2>Enigme 3 Résolu</h2>
+    <h2>Enigme 4 Résolu</h2>
+    <h2>Énigme 5 - Les Moutons</h2>
     <p>
       À côté d’un massif de fleurs, une décoration représentant une abeille a attiré l’attention de plusieurs témoins.  
       Coïncidence ou message laissé volontairement ?
     </p>
-    <p><strong>Mot attendu : ABEILLE</strong></p>
-    <iframe src="https://lockee.fr/o/09as9zdt?nobg&noft&top&light"></iframe>
+       <iframe src="https://lockee.fr/o/09as9zdt?nobg&noft&top&light"></iframe>
    
   </div>
 
   <div id="etape6" style="display:none;">
-    <h3>Fin de l’enquête sur ce suspect.</h3>
+    <h2>Enigme 1 Résolu</h2>
+    <h2>Enigme 2 Résolu</h2>
+    <h2>Enigme 3 Résolu</h2>
+    <h2>Enigme 4 Résolu</h2>
+    <h2>Enigme 5 Résolu</h2>
+    <h2> Fin de l'enquete sur le suspect</h2>
+    <p>
+      Nous avons toutes les informations qu'il faut.. nous devons regarder d'autre suspect. 
+    </p>
+    <p>
+       Dans ses carnets de partitions, un mot revenait sans cesse, entouré, surligné :
+      <span style="display:inline-block; font-size:1.5em; color:#FFD700; font-weight:bold; background:#333; padding:4px 8px; border-radius:6px;">
+        2. raconter
+      </span>
+      Comme si tout ce qu’il faisait n’était qu’un moyen de raconter quelque chose. Peut-être est-ce une piste...Il vaut mieux garder ceci pour plus tard!
+    </p>
+
     <a href="./suspects.html" onclick="localStorage.setItem('suspect3','done')" class="btn">
-      Retour aux suspects
+     Valider l'enquête sur ce suspect
     </a>
     
   </div>
