--- a/v2025/suspect4.html
+++ b/v2025/suspect4.html
@@ -52,9 +52,19 @@
 ">
   🔙 Retour aux suspects
 </a>
+
+<div style="background:#222; padding:15px; border-radius:10px; margin:20px 0; box-shadow:0 0 10px rgba(0,0,0,0.6);">
+    <h2 style="margin-top:0; color:#FFD700;">🧑‍🏫 Fiche Suspect</h2>
+    <p><strong>Nom :</strong> Diote</p>
+    <p><strong>Prénom :</strong> Kelly</p>
+    <p><strong>Âge :</strong> 15 ans</p>
+    <p><strong>Profession :</strong> étudiante</p>
+    <p><strong>Particularités :</strong> Élève brillante mais mystérieuse, elle entretenait une relation particulière avec la professeure d’anglais.  
+    Elle semble vouloir aider à l’enquête, mais certains indices l'impliquent directement… à vous de démêler le vrai du faux.</p>
+ 
+</div>
   <p>
-    Élève brillante mais mystérieuse, elle entretenait une relation particulière avec la professeure d’anglais.  
-    Elle semble vouloir aider à l’enquête, mais certains indices l'impliquent directement… à vous de démêler le vrai du faux.
+    
   </p>
 
   <div id="etape1">
@@ -67,7 +77,8 @@
   </div>
 
   <div id="etape2" style="display:none;">
-    <h2>Énigme 2 - Rébus visuel #2</h2>
+    <h2>Enigme 1 Résolu</h2>
+    <h2>Enigme 2</h2>
     <p>
       Un second rébus a été retrouvé, cette fois-ci griffonné au dos d’un emploi du temps.  
       Il semblerait que ces images codées aient été destinées à quelqu’un d’autre…
@@ -77,7 +88,9 @@
   </div>
 
   <div id="etape3" style="display:none;">
-    <h2>Énigme 3 - Le numéro à composer</h2>
+    <h2>Enigme 1 Résolu</h2>
+    <h2>Enigme 2 Résolu</h2>
+    <h2>Enigme 3</h2>
     <p>
       Un numéro a été découvert dans une ancienne note de la professeure.  
       En l’appelant via Lockee, un message enregistré pourrait révéler un élément crucial de l’affaire.
@@ -87,7 +100,10 @@
   </div>
 
   <div id="etape4" style="display:none;">
-    <h2>Énigme 4 - L’événement d’escalade</h2>
+    <h2>Enigme 1 Résolu</h2>
+    <h2>Enigme 2 Résolu</h2>
+    <h2>Enigme 3 Résolu</h2>
+    <h2>Enigme 4</h2>
     <p>
       En fouillant dans les réseaux sociaux de l’élève, les enquêteurs découvrent qu’elle a assisté à un événement d’escalade récent à Genève.  
       Un lien avec la disparition pourrait être caché dans les détails de cette sortie sportive.En quelle année a-t-on vu la bataille de l'escalade à Genève?
@@ -96,15 +112,26 @@
   </div>
 
   <div id="etape5" style="display:none;">
+    <h2>Enigme 1 Résolu</h2>
+    <h2>Enigme 2 Résolu</h2>
+    <h2>Enigme 3 Résolu</h2>
+    <h2>Enigme 4 Résolu</h2>
     <h2>Énigme 5 - La preuve d’innocence</h2>
     <p>
       Finalement, un élément décisif est retrouvé : une preuve qui semble disculper complètement l'élève.  
-      Elle n’aurait donc rien à voir avec la disparition ?
+      Elle n’aurait donc rien à voir avec la disparition ? 
+    </p>
+    <p>
+       Ces mots ne sont pas laissés au hasard. Réunis, ils vous mèneront quelque part. Essayez de les entrer sur le site
+      <span style="display:inline-block; font-size:1.5em; color:#FFD700; font-weight:bold; background:#333; padding:4px 8px; border-radius:6px;">
+        -  what3words.com -
+      </span>
+      Trois mots, une seule destination…Peut etre nous aurons plus d'informations avec les autres suspects?
     </p>
     
     <h3>Fin de l’enquête sur ce suspect</h3>
     <a href="./suspects.html" onclick="localStorage.setItem('suspect4','done')" class="btn">
-      Retour aux suspects
+      Valider l'enquête sur ce suspect
     </a>
   </div>
 
