--- a/v2025/suspect3.html
+++ b/v2025/suspect3.html
@@ -99,7 +99,7 @@
         </button>
       </p>
       <audio id="morseAudio" src="../img/melody.wav"></audio>
-      Vous devrez retrouver ces notes et reconstituer le mot sur Lockee.
+      Vous devrez retrouver ces notes et trouver le mot de passe qui se cache derrière cette musique.
 
       <a href="https://lockee.fr/o/1BOGmEn5" class="btn">
       lien d'un piano numérique
